--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "API project for freeCodeCamp",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "cross-env NODE_ENV=development node index.js",
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "cross-env": "^7.0.3",
+    "dotenv": "^8.6.0",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0",
+    "parse-url": "^8.1.0"
   },
   "license": "MIT",
   "devDependencies": {
